--- a/.github/workflows/empty_commit.yml
+++ b/.github/workflows/empty_commit.yml
@@ -4,15 +4,16 @@ on:
   schedule:
     - cron: '*/5 * * * *' # Every 5 minutes for testing
 
+permissions:
+  contents: write # Grant permission to write to the repository
+
 jobs:
   make-empty-commit:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v3 # Updated to v3
-      with:
-        persist-credentials: false # Prevents automatic persisting of credentials
+      uses: actions/checkout@v3
 
     - name: Configure Git
       run: |
