--- a/.github/workflows/empty_commit.yml
+++ b/.github/workflows/empty_commit.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
+    
+    - name: Install dependencies
+      run: pip install -r requirements_github_actions.txt
 
     - name: Configure Git
       run: |
